dataset1235/2025-2/1955397009/users/4276496853/executions/1107611404_2667036473.log
== RUN (2025-08-14 16:49:46)
-- CODE: 
x=10/3
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
3.33
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
3.33
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
3.33
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
3.33
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
3.33
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
3.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:51:56)
-- CODE: 
x=10/3
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
3.33
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
3.33
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
3.33
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
3.33
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
3.33
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
3.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:11:47)
-- CODE: 
celsius= float(input("Digite os graus: "))

kelvin = celsius + 273.15

print(kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite os graus: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite os graus: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite os graus: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite os graus: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite os graus: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite os graus: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:49:32)
-- CODE: 
x=10/3
round(x,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
None
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
None
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:10:19)
-- CODE: 
celsius= float(input("Digite os graus: "))

kelvin = celsius + 273.15

print("f{kelvin: .2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite os graus: f{kelvin: .2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite os graus: f{kelvin: .2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite os graus: f{kelvin: .2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite os graus: f{kelvin: .2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite os graus: f{kelvin: .2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite os graus: f{kelvin: .2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:59:31)
-- CODE: 
celsius= float(input())

kelvin = celsius + 273.15

print("f{kelvin:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin:.2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin:.2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:02:23)
-- CODE: 
celsius= float(input())

kelvin = celsius + 273.15

print("f{kelvin: .2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin: .2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin: .2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 17:12:27)
-- CODE: 
celsius= float(input("Digite os graus: "))

kelvin = celsius + 273.15

print(kelvin)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite os graus: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite os graus: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite os graus: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite os graus: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite os graus: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite os graus: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 16:58:42)
-- CODE: 
celsius= float(input())

Kelvin = celsius + 273.15

print("f{kelvin:.2f}")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin:.2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin:.2f}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:51:56)
-- CODE: 
x=10/3
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
3.33
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
3.33
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
3.33
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
3.33
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
3.33
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
3.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 16:57:54)
-- CODE: 
celsius= float(input())

Kelvin = celsius + 273.15

print("f{kelvin:. 2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin:. 2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin:. 2f}
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:58:20)
-- CODE: 
celsius= float(input())

Kelvin = celsius + 273.15

print("f{kelvin:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin:.2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin:.2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:02:49)
-- CODE: 
celsius= float(input())

kelvin = celsius + 273.15

print("f{kelvin: .2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin: .2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin: .2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:03:02)
-- CODE: 
celsius= float(input())

kelvin = celsius + 273.15

print("f{kelvin: .2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin: .2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin: .2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin: .2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:54:39)
-- CODE: 
celsius= float(input())

Kelvin = celsius + 273.15

print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(kelvin, 2))
                ^^^^^^
NameError: name 'kelvin' is not defined. Did you mean: 'Kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(kelvin, 2))
                ^^^^^^
NameError: name 'kelvin' is not defined. Did you mean: 'Kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(kelvin, 2))
                ^^^^^^
NameError: name 'kelvin' is not defined. Did you mean: 'Kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(kelvin, 2))
                ^^^^^^
NameError: name 'kelvin' is not defined. Did you mean: 'Kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(kelvin, 2))
                ^^^^^^
NameError: name 'kelvin' is not defined. Did you mean: 'Kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(kelvin, 2))
                ^^^^^^
NameError: name 'kelvin' is not defined. Did you mean: 'Kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:11:58)
-- CODE: 
celsius= float(input("Digite os graus: "))

kelvin = celsius + 273.15

print(kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite os graus: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite os graus: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite os graus: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite os graus: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite os graus: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite os graus: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 17:12:23)
-- CODE: 
celsius= float(input("Digite os graus: "))

kelvin = celsius + 273.15

print(kelvin)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Digite os graus: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Digite os graus: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Digite os graus: 233.14999999999998
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Digite os graus: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Digite os graus: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Digite os graus: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:58:31)
-- CODE: 
celsius= float(input())

Kelvin = celsius + 273.15

print("f{kelvin:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin:.2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin:.2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin:.2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:49:06)
-- CODE: 
x=10/3
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
3.3333333333333335
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
3.3333333333333335
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
3.3333333333333335
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
3.3333333333333335
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
3.3333333333333335
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
3.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 16:57:22)
-- CODE: 
celsius= float(input())

Kelvin = celsius + 273.15

print("f{kelvin:. 2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
f{kelvin:. 2f}
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
f{kelvin:. 2f}
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
f{kelvin:. 2f}
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
